Tests/Positive/FunCall.mr
mod Engine {
    pub fun start() {}
}

fun main(): i32 {
    Engine.start();
    return 0;
}
